# LowNoCompute-AGI-Baseline

./: .gitignore  BUGFIX.md  CHANGELOG.md  COMPREHENSIVE_TEST_REPORT.md  LIVE_TEST_RESULTS.md  MANIFEST.in  PYPI_DEPLOYMENT_GUIDE.md  README.md  README_PYPI.md  VERIFICATION_REPORT.md  demo.ipynb  main.py  pyproject.toml  requirements.txt  setup.py  upload_to_pypi.sh
configs/: config.yaml  config_loader.py
docs/: USAGE.md
environments/: dummy_env.py
examples/: basic_usage.py  main_with_config.py
lownocompute_ai_baseline/: __init__.py
lownocompute_ai_baseline/configs/: __init__.py
tests/: test_main.py
